npx @tailwindcss/upgrade

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="bg-white dark:bg-chromiumPrimaryDark select-none">
+<html lang="en" class="bg-white dark:bg-chromium-primary-dark select-none">
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon_64.png" />
